tests/ui/suggestions/return-closures.stderr
error[E0308]: mismatched types
  --> $DIR/return-closures.rs:3:5
   |
LL |     |x: &i32| 1i32
   |     ^^^^^^^^^^^^^^ expected `()`, found closure
   |
   = note: expected unit type `()`
                found closure `{closure@$DIR/return-closures.rs:3:5: 3:14}`
help: try adding a return type
   |
LL | fn foo() -> impl FnOnce(&i32) -> i32 {
   |          +++++++++++++++++++++++++++

error[E0308]: mismatched types
  --> $DIR/return-closures.rs:9:5
   |
LL |     || i
   |     ^^^^ expected `()`, found closure
   |
   = note: expected unit type `()`
                found closure `{closure@$DIR/return-closures.rs:9:5: 9:7}`
help: a return type might be missing here
   |
LL | fn bar(i: impl Sized) -> _ {
   |                       ++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
